--- a/app/src/main/res/layout/activity_order_details.xml
+++ b/app/src/main/res/layout/activity_order_details.xml
@@ -7,55 +7,42 @@
     tools:context=".OrderDetailsActivity">
 
     <TextView
-        android:id="@+id/textViewODTitle"
+        android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="ORDER DETAILS"
-        android:textColor="@color/white"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="76dp"
+        android:text="TextView"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView_logo3"
-        app:layout_constraintVertical_bias="0.01999998" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView_logo3"
+        android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="HealthHub"
-        android:textColor="@color/purple_200"
-        android:textSize="34sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="68dp"
+        android:text="TextView"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.045" />
-
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <ListView
         android:id="@+id/listView"
-        android:layout_width="344dp"
-        android:layout_height="523dp"
-        android:layout_marginStart="-40dp"
-        android:layout_marginTop="12dp"
-        android:layout_marginEnd="-40dp"
-        app:layout_constraintEnd_toEndOf="@+id/textViewODTitle"
-        app:layout_constraintHorizontal_bias="0.51"
-        app:layout_constraintStart_toStartOf="@+id/textViewODTitle"
-        app:layout_constraintTop_toBottomOf="@+id/textViewODTitle" />
+        android:layout_width="268dp"
+        android:layout_height="290dp"
+        app:layout_constraintEnd_toEndOf="@+id/textView3"
+        app:layout_constraintStart_toStartOf="@+id/textView3"
+        tools:layout_editor_absoluteY="272dp" />
 
     <Button
         android:id="@+id/buttonODBack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="BACK"
+        android:text="Button"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintBottom_toBottomof="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_contraintVertical_bias="0.69" />
-
+        app:layout_constraintTop_toBottomOf="@+id/_dynamic" />
 </androidx.constraintlayout.widget.ConstraintLayout>
